syntax = "proto3";
package productimon.common;
option go_package = "git.yiad.am/productimon/proto/common";

import "proto/common/events.proto";

message Empty {}

message Timestamp {
  // Nanoseconds since UNIX epoch
  int64 nanos = 1;
}

message Interval {
  Timestamp start = 1;
  Timestamp end = 2;
}

message User {
  string id = 1;
  string email = 2;
  string password = 3;
}

message Device {
  User user = 1;

  // sequential ID under user
  int64 id = 2;

  enum DeviceType {
    LINUX = 0;
    MACOS = 1;
    WINDOWS = 2;
    ANDROID = 3;
    IOS = 4;
  }
  DeviceType device_type = 3;

  string name = 4;
}

message Event {
  Device device = 1;

  // increasing id bound to device
  int64 id = 2;

  Interval timeinterval = 3;

  oneof kind {
    AppSwitchEvent app_switch_event = 4;
    KeyStrokeEvent key_stroke_event = 5;
    MouseClickEvent mouse_click_event = 6;
    StartTrackingEvent start_tracking_event = 7;
    StopTrackingEvent stop_tracking_event = 8;
  }
}
